# melanopy

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  codecov.yml  pyproject.toml  zensical.toml
.claude/skills/color-science/: SKILL.md
.claude/skills/melanopy-color-science/: SKILL.md
.github/workflows/: ci.yml  docs.yml  manuscript.yml  release.yml
docs/: axis.md  circadia.md  cookbook.md  generator.md  index.md  leaderboard.md  limitations.md  rating.md  reference.md  validation.md
examples/: alpha_slider_demo.py  build_the_family.py  rate_a_map.py
index/: README.md  leaderboard.csv  panel_robustness.csv
manuscript/: Makefile  build.sh  luox_crosscheck.md  luox_crosscheck.py  main.tex  manuscript.md  melanopy_spectra_for_luox.csv  prior_art.md  references.bib
manuscript/figures/: leaderboard.tex  leaderboard_note.tex
scripts/: _figtheme.py  _perceptual.py  build_accent.py  build_docs_swatches.py  build_figures.py  build_leaderboard.py  build_logo.py  build_panel_robustness.py  build_panels.py  build_qualitative.py  build_sleep_wake_demo.py
src/melanopy/: __init__.py  accent.py  categorical.py  coeffs.py  generator.py  hypnogram.py  qualitative.py  rater.py  spectra.py
src/melanopy/adapters/: mpl.py  pyqtgraph.py
src/melanopy/data/: NOTICE.md  cie_s026_actionspectra.csv
tests/: test_adapters.py  test_coeffs.py  test_edges.py  test_palettes.py  test_panels.py  test_perceptual.py  test_sanity.py
