[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melanopy"
dynamic = ["version"]
description = "A melanopic axis for colormaps: rate, rank, and generate colormaps by circadian (melanopic) content."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Remington Mallett", email = "mallett.remy@gmail.com"}]
maintainers = [{name = "Remington Mallett", email = "mallett.remy@gmail.com"}]
keywords = [
    "colormap",
    "melanopic",
    "circadian",
    "CIE-S026",
    "visualization",
    "sleep",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "colorspacious>=1.1.2",
    "ipython>=9.14.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
]
qt = ["pyqtgraph>=0.14.0"]

[project.urls]
Homepage = "https://github.com/remrama/melanopy"

[tool.setuptools.dynamic]
version = {attr = "melanopy.__version__"}

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
melanopy = ["data/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["pyproject.toml", "examples/*.py", "scripts/*.py", "src/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "UP", "NPY201"]  # ["E4", "E7", "E9"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Star and unused import violations

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["melanopy"]
relative_files = true
